[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/building/BuildingHUD.gd" type="Script" id=2]
[ext_resource path="res://ui/uiComponents/FlexContainer.gd" type="Script" id=3]
[ext_resource path="res://ui/building/BuildingCategoryOptions.tscn" type="PackedScene" id=4]

[node name="VBox" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 997.0
margin_bottom = 167.0
script = ExtResource( 2 )

[node name="BuildingCategoryTabs" type="Container" parent="."]
margin_right = 990.0
script = ExtResource( 3 )

[node name="BuildingOptions" type="Control" parent="."]
margin_top = 4.0
margin_right = 990.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BuildingCategoryOptions" parent="BuildingOptions" instance=ExtResource( 4 )]
